package models;

public class Admin extends Person {

    accountName = "AdminNo.1";
    password = "adminno1";
    nickname = "Adminitrator";
    
    public void censorSession(AuctionSession session) {
        // Code duyệt sản phẩm
        System.out.println("The product has been approved!");
    }

    /*public void ban(User user) {
        // Code ban tài khoản
        System.out.println("The account has been banned: " + user.getAccountName());
    }*/
}