package models;

public enum StatusOfAuction {
    NOT_STARTED,
    ONGOING,
    ENDED,
    PENDING,
    CANCELED
}
